--- a/fansite1.css
+++ b/fansite1.css
@@ -86,69 +86,133 @@
     }
 
     nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
       background: var(--primary-color);
-      max-height: 55px;
-      padding: 0px 24px;
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: center;
+      justify-content: space-between;
+      box-sizing: border-box;
+      height: 55px;
+      
 
-          ul {
-            flex-flow: row nowrap;
-            background: red;
+
+          .limonade {
+            display: flex;
+            justify-content: space-evenly;
+            gap: 24px;
+            align-items: center;
+            padding: 0px 32px;
+            max-height: fit-content;
+
+            h2 {
+              font-family: "Poiret One", serif;
+              letter-spacing: 1pt;
+              font-size: 20pt;
+              padding: 0;
+              font-weight: bold;
+              color: var(--secondary-color);
+            }
+          }
+
+          .responsive {
             display: none;
-          }
 
-          input[type="checkbox"] {
-            background: red;
-            height: 32px;
-            width: 32px;
-            cursor: pointer;
-            opacity:0;
-          }
+            input[type="checkbox"] {
+              position: absolute;
+              top: 18px;
+              right: 24px;
+              background: red;
+              height: 32px;
+              width: 32px;
+              cursor: pointer;
+              opacity:0;
+            }
 
-          label {
+            label {
+                      width: 32px;
+                      height: 4px;
+                      position: absolute;
+                      top: 24px;
+                      right: 24px;
+                      border-radius: 1px;
+                      background: var(--secondary-color);
+                      transition: all 0.3s ease;
+                      cursor: pointer;
+                      /* z-index: 3; */
+                  
+
+                  &:before, &:after {
+                    content: " ";
+                    display: block;
+                    position: relative;
                     width: 32px;
                     height: 4px;
-                    position: absolute;
-                    top: 18px;
-                    right: 24px;
                     border-radius: 1px;
+                    transition: all 0.7s ease;
+                    z-index: 1;
+                  }
+
+                  &:before {
+                    bottom: 10px;
                     background: var(--secondary-color);
-                    cursor: pointer;
-                    /* z-index: 3; */
-                
+                    transform-origin: left top;
+                  }
 
-                &:before, &:after {
-                  content: " ";
-                  display: block;
-                  position: relative;
-                  width: 32px;
-                  height: 4px;
-                  border-radius: 1px;
-                  transition: all 0.7s ease;
-                  z-index: 1;
-                }
+                  &:after {
+                    top: 6px;
+                    background: var(--secondary-color);
+                    transform-origin: left bottom;
+                  }
+            }
 
-                &:before {
-                  bottom: 10px;
-                  background: var(--secondary-color);
-                  transform-origin: left top;
-                }
 
-                &:after {
-                  top: 6px;
-                  background: var(--secondary-color);
-                  transform-origin: left bottom;
+            #menu-hamburger {
+              display: none;
+
+              &:checked {
+                &~label::before{
+                  transform: rotateZ(40deg);
                 }
+        
+                &~label::after{
+                  transform: rotateZ(-40deg);
+                }
+                &~label {
+                  background-color: var(--primary-color);
+                  transition: all 0.3s ease;
+                }
+              }
           }
-          #menu-hamburger {
-        }
 
+          }
+
+          .nav-link {
+              padding: 0px 24px;
+              
+
+              ul {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+
+                  li a {
+                    display: inline-block;
+                    color: var(--secondary-color);
+                    font-family: "Poiret One", serif;
+                    letter-spacing: 1pt;
+                    font-size: 14pt;
+                    font-weight: bolder;
+                    padding: 16px;
+                  } 
+                }
+
+             
+
+          }          
 
           img {
-            height: 35px;
-            width: auto;
+            max-width: 30px;
+            height: auto;
           }
 
     }
@@ -332,6 +396,9 @@ footer {
       /* article:first-of-type {
       } */
 
+      .menuFooter {
+      }
+
       .menuBlackpink {
         order: -1;
         font-variant: small-caps;
@@ -354,6 +421,28 @@ footer {
   .headerNavbar {
     background: url(./images_blackping/blackpink9.jpg) 50% 20% no-repeat fixed;
     background-size: cover;
+
+      nav {
+          .responsive {
+            input[type="checkbox"] {
+              display: none;
+            }
+
+            label {
+              display: none;    
+            }
+          }
+
+          .nav-link {
+                ul {
+                /* padding: 0px 24px;
+                margin-right: 24px; */
+                    li a {
+                      margin-right: 24px;
+                    }
+              }
+          }
+    }
   }
 
   main {
@@ -429,7 +518,85 @@ footer {
 
   .headerNavbar {
     background: url(./images_blackping/blackpink2.jpg) 50% 20% no-repeat;
-    background-size: contain;
+    object-fit: fill;
+    height: 100vh;
+    box-sizing: border-box;
+
+    h1 {
+      font-size: 52pt;
+    }
+
+    nav {
+
+      
+
+
+          .limonade {
+
+            h2 {
+            }
+          }
+
+          .responsive {
+            display: block;
+                input[type="checkbox"] {
+                  display: block;
+                  z-index:1;
+                }
+
+                label {
+                  display: block;
+                  z-index: 2;
+                }
+
+                #menu-hamburger {
+                  display: block;
+              } 
+          }
+
+          .nav-link {
+                  
+                  width: 100%;
+                  height: 100vh;
+                  position: absolute;
+                  backdrop-filter: blur(3px);
+                  top: -120vh;
+                  left: 0px;
+                  z-index: 1;
+                  background: rgba(0,0,0,0.7);
+
+                  ul {
+                    flex-flow: column nowrap;
+                    justify-content: space-evenly;
+                    align-items: center;
+
+                    width: 100%;
+                    height: 100%;
+
+                    li {
+                      font-size: 5em;
+                      font-weight: bolder;
+                    }
+                  
+
+                      li a {
+                        color: var(--blackpink);
+                        -webkit-text-stroke: #111111 solid 1px;
+                      }
+                }    
+          }
+
+          .mobile-menu {
+            margin-right: 0;
+            top: 0px;
+            right: 0px;
+            padding: 0px;
+        }
+
+          img {
+          }
+
+    }
   }
 
   main {
